--- a/LINEARMODEL.Rmd
+++ b/LINEARMODEL.Rmd
@@ -32,6 +32,19 @@ basicNN <- ggplot(dataF,aes(y=SIMS,x=ARM))
 basicNN + geom_point()+ geom_smooth(method=lm)
 ```
 
+```{r}
+basicNN <- ggplot(dataF,aes(y=SIMS,x=GRIP))
+```
+## Now add in scatterplot
+
+```{r}
+basicNN + geom_point()+ geom_smooth(method=lm)
+```
+
+
+
+
+
 
 
 
