--- a/LINEARMODEL.Rmd
+++ b/LINEARMODEL.Rmd
@@ -48,6 +48,17 @@ summary.lm(model.1)
 
 This particular model about 47% of the variation more then the mean model did. The Adjusted R squared is 0.467
 
+```{r}
+model.2 <- lm(SIMS~GRIP,data=dataF)
+summary.lm(model.2)
+``` 
+
+The model for ARM is better then the model for GRIP.
+
+```{r}
+model.3 <- lm(SIMS~GRIP + ARM,data=dataF)
+summary.lm(model.3)
+``` 
 
 
 
