--- a/LINEARMODEL.Rmd
+++ b/LINEARMODEL.Rmd
@@ -46,6 +46,15 @@ model.1 <- lm(SIMS~ARM,data=dataF)
 summary.lm(model.1)
 ```
 
+
+```{r}
+new <- data.frame(ARM=88,GRIP=94)
+predict.lm(model.1,new)
+predict(model.1,new,interval="prediction")
+```
+
+
+
 This particular model about 47% of the variation more then the mean model did. The Adjusted R squared is 0.467
 
 ```{r}
@@ -53,12 +62,45 @@ model.2 <- lm(SIMS~GRIP,data=dataF)
 summary.lm(model.2)
 ``` 
 
-The model for ARM is better then the model for GRIP.
+```{r}
+new <- data.frame(ARM=88,GRIP=94)
+predict.lm(model.2,new)
+predict(model.2,new,interval="prediction")
+```
+
+The model for ARM is a independent model and is lower then model.1 and
+
+
 
 ```{r}
 model.3 <- lm(SIMS~GRIP + ARM,data=dataF)
 summary.lm(model.3)
 ``` 
+
+```{r}
+new <- data.frame(ARM=88,GRIP=94)
+predict.lm(model.3,new)
+predict(model.3,new,interval="prediction")
+```
+  
+In this model.3 the Adjusted R square is 0.5358, Which makes model.3 the best model out of all three models. 
+
+
+```{r}
+anova(model.1,model.3)
+```
+
+
+
+In this model.3 the Adjusted R square is 0.5358, Which makes model.3 the best model out of all three models. 
+
+
+
+
+
+
+
+
 
 
 
